--- a/style.css
+++ b/style.css
@@ -6,7 +6,15 @@ body {
     background-repeat: no-repeat;
 }
 
+a {
+    text-decoration: none;
+}
+
+#view {
+    text-align: center;
+}
 .header {
+    /* padding-left: 30px; */
     position: relative;
     max-width: 840px;
     margin-top: .5em;
@@ -14,7 +22,22 @@ body {
     letter-spacing: -1px;
     line-height: 1.7;
     font-size: 1.5rem;
-    font-weight: 0px;;
+    font-weight: 0px;
+}
+
+h1 {
+    color: rgb(43, 103, 104);
+}
+
+h2 {
+    color: rgb(43, 103, 104);
+}
+
+h3 {
+    text-align: center;
+}
+h1:hover {
+    text-decoration: underline;
 }
 #image {
     margin-left: 0px;
@@ -22,12 +45,10 @@ body {
 }
 .nav {
     /* display: flex; */
-    border: solid 1px;
+    text-decoration: none;
 }
-
 ul {
-    display: flex;
-    /* justify-content: space-between; */
+    text-decoration: none;
 }
 .top-row {
    display: flex;
@@ -41,6 +62,35 @@ ul {
     
 } 
 
+.skills-section {
+    height: 350px;
+}
+
+.skills-row {
+    padding: 10px;
+    margin: 0px;
+    width: 100%;
+
+}
+.logo-row {
+    
+    padding: 50px 0px 0px 0px;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.logo-img {
+    padding: 50px 0px 0px 0px;
+    height: 100px;
+}
+
+.logo-img:hover {
+    transition: all .2s ease;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 2px -2px gray;
+}
 #first-box {
     border: 2px solid;
     height: 500px;
@@ -53,7 +103,7 @@ ul {
 #first-box:hover {
     transition: all .2s ease;
     transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(93,93,93,.1)
+    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
 }
 
 #tea-tree {
@@ -76,7 +126,15 @@ ul {
 #second-box:hover {
     transition: all .2s ease;
     transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(93,93,93,.1)
+    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
+}
+
+#furry {
+    display: block;
+    position: relative;
+    height: 450px;
+    width: 500px;
+    margin-top: -19px;
 }
 
 #third-box {
@@ -91,7 +149,7 @@ ul {
 #third-box:hover {
     transition: all .2s ease;
     transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(93,93,93,.1)
+    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
 }
 
 #fourth-box {
@@ -106,5 +164,23 @@ ul {
 #fourth-box:hover {
     transition: all .2s ease;
     transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(93,93,93,.1)
+    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
+}
+
+#hang {
+    display: block;
+    position: relative;
+    height: 450px;
+    width: 500px;
+    margin-top: -19px;
+    margin-right: 0px;
+}
+
+#weather {
+    display: block;
+    position: relative;
+    height: 450px;
+    width: 500px;
+    margin-top: -19px;
+    margin-right: 0px;
 }
