--- a/style.css
+++ b/style.css
@@ -1,186 +1,180 @@
+* {
+    margin: 0;
+    padding: 0;
+
+}
 body {
-    padding: 20px;
-    font-family: 'Asap', sans-serif;
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(89,228,213,1) 51%, rgba(0,212,255,1) 100%);
-    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-align: center;
+    
+}
+
+main {
+    width: 100%;
+}
+
+/* navbar */
+.nav-bar {
+    height: 8vh;
+    width: 100vw;
+    background-color: rgba(64, 102, 83, 0.658);
+    display: inline-block;
+}
+
+.nav-bar-title {
+    color: whitesmoke;
+    font-size: 1.5em;
+    width: 129px;
+    margin: auto;
+    float: left;
+    margin: 17px;
+
+}
+
+.nav-links {
+    display: flex;
+    float: right;
+    align-content: center;
+    color: whitesmoke;
+    height: 33px;
+    margin: 25px;
+    text-decoration: none;
+    
+}
+
+li {
+    margin: 30px;
+    margin-top: 0px;
+    list-style: none;
 }
 
 a {
     text-decoration: none;
+    color: white;
 }
 
-#view {
-    text-align: center;
+/* @media screen and (max-width: 479px) {
+    .nav-bar {
+        display: none;
+    }
+
+    * {
+        background: whitesmoke;
+        text-align: center;
+    }
+} */
+
+
+/* greeting section */
+.greeting-area {
+    height: 110vh;
+    background-color: rgba(64, 102, 83, 0.658);
+    color: whitesmoke;
+    display: flex;
+    justify-content: center;
 }
+
 .header {
-    /* padding-left: 30px; */
-    position: relative;
-    max-width: 840px;
-    margin-top: .5em;
-    margin-bottom: 1.5em;
-    letter-spacing: -1px;
-    line-height: 1.7;
-    font-size: 1.5rem;
-    font-weight: 0px;
+    font-family: 'Work Sans', sans-serif;
 }
 
-h1 {
-    color: rgb(43, 103, 104);
+.sub-header {
+    font-family: 'Work Sans', sans-serif;
+}
+.greeting-text-header {
+    margin-top: 15%;
+    font-family: 'Work Sans', sans-serif;
+
 }
 
-h2 {
-    color: rgb(43, 103, 104);
+.fas {
+    font-size: 35px;
+    margin: 72px;
+}
+/* skills area */
+.skills-area {
+    height: 50vh;
+}
+.logo-img {
+    height: 50px;
+    width: 50px;
+    opacity: 0.7;
 }
 
-h3 {
-    text-align: center;
-}
-h1:hover {
-    text-decoration: underline;
-}
-#image {
-    margin-left: 0px;
-    height: 90px;
-}
-.nav {
-    /* display: flex; */
-    text-decoration: none;
-}
-ul {
-    text-decoration: none;
-}
-.top-row {
-   display: flex;
-   justify-content: space-evenly;
+img {
+    height: 210px;
+    width: 100%;
 }
 
-.bottom-row {
+/* card section */
+.card-container {
+    background-color: #f5f6f7;
+}
+
+.mdl-card {
+    height: 30.5em;
+    /* width: 95%; */
+}
+
+.mdl-card:hover {
+    transition: all .3s ease-in-out;
+    transform: translate(0, -5px);
+    box-shadow: 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12), 0 5px 5px -3px rgba(0,0,0,.2);
+}
+    
+
+.card-container-1 {
     display: flex;
     justify-content: space-evenly;
-    padding-top: 20px;
-    
+    align-content: center;
+    margin-bottom: 40px;
+}
+
+.card-container-2 {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
 } 
 
-.skills-section {
-    height: 350px;
+#contact-links {
+    color: turquoise;
 }
 
-.skills-row {
-    padding: 10px;
-    margin: 0px;
-    width: 100%;
-
+.footer {
+    font-family: 'Work Sans', sans-serif;
 }
-.logo-row {
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
     
-    padding: 50px 0px 0px 0px;
-    height: 100px;
-    display: flex;
-    justify-content: space-around;
-    
-}
-
-.logo-img {
-    padding: 50px 0px 0px 0px;
-    height: 100px;
-}
-
-.logo-img:hover {
-    transition: all .2s ease;
-    transform: translateY(-2px);
-    box-shadow: 0 4px 2px -2px gray;
-}
-#first-box {
-    border: 2px solid;
-    height: 500px;
-    width: 500px;
-    background-color: whitesmoke;
-    transition: all .2s ease;
-    transform: translateY(0);
-}
-
-#first-box:hover {
-    transition: all .2s ease;
-    transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
-}
-
-#tea-tree {
-    display: block;
-    position: relative;
-    height: 450px;
-    width: 500px;
-    margin-top: -19px;
-    margin-right: 0px;
-}
-#second-box {
-    border: 2px solid;
-    height: 500px;
-    width: 500px;
-    background-color: whitesmoke;
-    transition: all .2s ease;
-    transform: translateY(0);
-}
-
-#second-box:hover {
-    transition: all .2s ease;
-    transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
-}
-
-#furry {
-    display: block;
-    position: relative;
-    height: 450px;
-    width: 500px;
-    margin-top: -19px;
-}
-
-#third-box {
-    border: 2px solid;
-    height: 500px;
-    width: 500px;
-    background-color: whitesmoke;
-    transition: all .2s ease;
-    transform: translateY(0);
-}
-
-#third-box:hover {
-    transition: all .2s ease;
-    transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
-}
-
-#fourth-box {
-    border: 2px solid;
-    height: 500px;
-    width: 500px;
-    background-color: whitesmoke;
-    transition: all .2s ease;
-    transform: translateY(0);
-}
-
-#fourth-box:hover {
-    transition: all .2s ease;
-    transform: translateY(-2px);
-    box-shadow: 0 8px 14px rgba(10, 10, 10, 0.803)
-}
-
-#hang {
-    display: block;
-    position: relative;
-    height: 450px;
-    width: 500px;
-    margin-top: -19px;
-    margin-right: 0px;
-}
-
-#weather {
-    display: block;
-    position: relative;
-    height: 450px;
-    width: 500px;
-    margin-top: -19px;
-    margin-right: 0px;
-}
+    .greeting-text-header {
+      text-align: center;
+      width: 100%;
+      font-size: 2.5em;
+    }
+      .sub-header {
+          font-size: 30px;
+          margin-top: 90px;
+          padding: 10px;
+      }
+  h1 {
+      font-size: 41px;
+  }
+      .card-container-1 {
+          display: grid;
+          margin-bottom: 40px; 
+      }
+  
+      .card-container-2 {
+          display: grid;
+          background-color: rgb(225, 234, 237);
+         
+      }
+  
+      .mdl-card {
+          margin: .7em;
+          height: 30.5em;
+          
+      }
+  }
