--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   text-align: center;
   background-color: #fff;
   font-family: "Work Sans", sans-serif;
+  width: 100%;
 }
 
 main {
@@ -186,8 +187,16 @@ img {
     margin-top: 90px;
     padding: 10px;
   }
+  #featured:after {
+    content: " ";
+    border: 4px solid #29c6b2;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+    width: 220px;
+  }
   h1 {
-    font-size: 41px;
+    font-size: 30px;
   }
   .card-container-1 {
     display: grid;
@@ -202,5 +211,9 @@ img {
   .mdl-card {
     margin: 0.7em;
     height: 30.5em;
+  }
+  .footer {
+    font-family: "Work Sans", sans-serif;
+    font-size: 20px;
   }
 }
