--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   padding: 0;
@@ -125,13 +129,13 @@ h1.header {
   font-family: "Work Sans", sans-serif;
 }
 .skills-area {
-  height: 50vh;
+  height: 80vh;
   background-color: #fbfbfb;
 }
+
 .logo-img {
   height: 50px;
   width: 50px;
-  opacity: 0.7;
 }
 
 img {
@@ -151,8 +155,11 @@ img {
 }
 
 .mdl-card {
-  height: 30.5em;
+  height: 35.5em;
+  width: 30rem;
+
   margin-bottom: 20px;
+  transition: all 0.195s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mdl-card:hover {
@@ -160,6 +167,36 @@ img {
   transform: translate(0, -5px);
   box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
     0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
+}
+
+.project-skill {
+  border-radius: 4px;
+  border: 2px solid #92eac0;
+  padding: 8px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-family: Camphor, Open Sans, Segoe UI, sans-serif;
+  font-size: 0.85em;
+  color: #525f7f;
+}
+
+.project-links {
+  margin-top: 30px;
+}
+.project-link {
+  margin-top: 20px;
+  padding: 10px 9px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+  letter-spacing: 0.025em;
+  text-decoration: none;
+  transition: all 0.15s ease;
+  font-family: Camphor, Open Sans, Segoe UI, sans-serif;
+  font-size: 0.9em;
+  font-weight: 600;
+  box-sizing: border-box;
+  background: #747fe0;
+  color: #fff;
 }
 
 .card-container-1 {
@@ -173,6 +210,7 @@ img {
 }
 
 .footer {
+  font-size: 2em;
   font-family: "Work Sans", sans-serif;
 }
 
