--- a/style.css
+++ b/style.css
@@ -252,9 +252,11 @@ img {
 
   .mdl-card {
     margin: 0.7em;
-    height: 50.5em;
+    height: 36.5em;
   }
-
+  .project-skills-links {
+    display: flex;
+  }
   .footer {
     font-family: "Work Sans", sans-serif;
     font-size: 20px;
