--- a/style.css
+++ b/style.css
@@ -247,6 +247,15 @@ img {
 .footer {
   font-size: 2em;
   font-family: "Work Sans", sans-serif;
+  background-color: #1799aa;
+  height: 10%;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.footer-icon {
+  height: 25px;
+  width: 25px;
 }
 
 @media screen and (min-width: 481px) and (max-width: 1083px) {
@@ -333,5 +342,9 @@ img {
     background-color: #1799aa;
     height: 10%;
     margin-bottom: 0;
+  }
+  .footer-icon {
+    height: 25px;
+    width: 25px;
   }
 }
